🐛 Fixed bugs