@@ -4,6 +4,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import bank.database.Database;
 import bank.entity.User;
@@ -40,11 +41,10 @@ public class UserDAO implements DAO<User> {
     *         if not found.
     * @throws DAOException If an error occurs while finding the entity.
     */
-   @SuppressWarnings("unchecked")
    @Override
    public Optional<User> findById(Long id) throws DAOException {
       try {
-         return (Optional<User>) database.findById(User.class, id);
+         return database.findById(User.class, id);
       } catch (DatabaseException e) {
          throw new DAOException("Erro na busca pelo usuário.", e);
       }
@@ -56,11 +56,10 @@ public class UserDAO implements DAO<User> {
     * @return A List of all User entities.
     * @throws DAOException If an error occurs while retrieving the entities.
     */
-   @SuppressWarnings("unchecked")
    @Override
    public List<User> findAll() throws DAOException {
       try {
-         return (List<User>) database.findAll(User.class);
+         return database.findAll(User.class);
       } catch (DatabaseException e) {
          throw new DAOException("Erro na busca dos usuários.", e);
       }
@@ -73,12 +72,11 @@ public class UserDAO implements DAO<User> {
     * @return A List of User entities that satisfy the filter.
     * @throws DAOException If an error occurs while retrieving the entities.
     */
-   @SuppressWarnings("unchecked")
    @Override
    public List<User> findAll(Predicate<User> filter) throws DAOException {
       try {
-         List<User> list = (List<User>) database.findAll(User.class);
-         return list.stream().filter(filter).toList();
+         List<User> list = database.findAll(User.class);
+         return list.stream().filter(filter).collect(Collectors.toList());
       } catch (DatabaseException e) {
          throw new DAOException("Erro na busca dos usuários.", e);
       }
@@ -92,12 +90,11 @@ public class UserDAO implements DAO<User> {
     * @return A List of User entities sorted according to the comparator.
     * @throws DAOException If an error occurs while retrieving the entities.
     */
-   @SuppressWarnings("unchecked")
    @Override
    public List<User> findAll(Comparator<User> comparator) throws DAOException {
       try {
-         List<User> list = (List<User>) database.findAll(User.class);
-         return list.stream().sorted(comparator).toList();
+         List<User> list = database.findAll(User.class);
+         return list.stream().sorted(comparator).collect(Collectors.toList());
       } catch (DatabaseException e) {
          throw new DAOException("Erro na busca dos usuários.", e);
       }
